--- a/pom.xml
+++ b/pom.xml
@@ -414,21 +414,12 @@
   </reporting>
 
   <!-- ==================================================================== -->
+
   <distributionManagement>
-
-    <repository>
-      <id>nexus-snapshots</id>
-      <url>localhost/repository/maven-snapshots/</url>
-    </repository>
-
     <snapshotRepository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>sonatype-joda-snapshot</id>
-      <name>Sonatype OSS snapshot repository</name>
-      <url>http://oss.sonatype.org/content/repositories/joda-snapshots</url>
-      <layout>default</layout>
+      <id>nexus-snapshots</id>
+      <url>localhost:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
-    <downloadUrl>http://oss.sonatype.org/content/repositories/joda-releases</downloadUrl>
   </distributionManagement>
 
   <!-- ==================================================================== -->
