added artifactory maven plugin to pom:

--- a/pom.xml
+++ b/pom.xml
@@ -500,6 +500,33 @@
             </executions>
           </plugin>
         </plugins>
+        <plugin>
+            <groupId>org.jfrog.buildinfo</groupId>
+            <artifactId>artifactory-maven-plugin</artifactId>
+            <version>3.2.0</version>
+            <inherited>false</inherited>
+            <executions>
+                <execution>
+                    <id>build-info</id>
+                    <goals>
+                        <goal>publish</goal>
+                    </goals>
+                    <configuration>
+                        <deployProperties>
+                            <gradle>awesome</gradle>
+                            <review.team>qa</review.team>
+                        </deployProperties>
+                        <publisher>
+                            <contextUrl>https://oss.jfrog.org</contextUrl>
+                            <username>admin</username>
+                            <password>password</password>
+                            <repoKey>joda-time-hibernate</repoKey>
+                            <snapshotRepoKey>joda-time-hibernate</snapshotRepoKey>
+                        </publisher>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
       </build>
 
       <repositories>
