inserted container ip

--- a/pom.xml
+++ b/pom.xml
@@ -432,12 +432,12 @@
     <repository>
         <id>central</id>
         <name>56ee39c3aef0-releases</name>
-        <url>http://localhost:8081/artifactory/joda-time-hibernate</url>
+        <url>http://172.17.0.3:8081/artifactory/joda-time-hibernate</url>
     </repository>
     <snapshotRepository>
         <id>snapshots</id>
         <name>56ee39c3aef0-snapshots</name>
-        <url>http://localhost:8081/artifactory/joda-time-hibernate</url>
+        <url>http://172.17.0.3:8081/artifactory/joda-time-hibernate</url>
     </snapshotRepository>
   </distributionManagement>
 
